--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: php
 
 php:
     - 5.6
-    - 7.0
-    - 7.1
+#    - 7.0
+#    - 7.1
     
 sudo: false
 
@@ -11,5 +11,6 @@ before_script:
     - composer install --prefer-dist
 
 script:
-    - phpunit test-runner.php .
+    - php PaymentTransactions/charge-credit-card.php
+#    - phpunit test-runner.php .
 
